--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-//	implementation 'junit:junit:4.13.1'
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation("org.assertj:assertj-core:3.20.2")
